<resources>
    <string name="app_name">SteakBerriesClub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NameLabel">Name</string>
    <string name="ValueLabel">Value</string>
    <string name="RegenValLable">Regen Value</string>
    <string name="WeightLabel">Weight</string>
    <string name="PlaceholderText">\???</string>
    <string name="DescriptionLabelValue">Description:</string>
</resources>
